@@ -2,6 +2,9 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  18 Apr 2007; Ulrich Mueller <ulm@gentoo.org> -xemacs-21.4.20-r3.ebuild:
+  Moved to Portage tree; fixes bug #167883.
+
   19 Mar 2007; Ulrich Mueller <ulm@kph.uni-mainz.de>
   xemacs-21.4.20-r3.ebuild:
   Depend on the latest eselect module version.
